# reasonable-math

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py3
src/basic/: CMakeLists.txt
src/basic/Private/: BasicVec.cpp
src/basic/Public/: BasicVec.h
src/core/: CMakeLists.txt
src/core/Private/: CoreVec.cpp
src/core/Public/: CoreVec.h
test/: BasicTests.cpp  CMakeLists.txt
